<resources>
    <string name="app_name">Best Currency Exchange</string>
    <string name="banner_ad_unit_id">ca-app-pub-9938026363796976/9730349446</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="invitation_title">Share with friends!</string>
    <string name="invitation_message">Check out the best app for converting currencies!</string>
    <string name="invitation_deep_link">https://c28cm.app.goo.gl/naxz</string>
    <string name="invitation_custom_image">https://lh3.googleusercontent.com/Gq9rARiSr0_gHblqexLpb4kd7MPE2iBcFRYT0VUDq8Cu_LlTbr7Bhzm0Z2h0boYn9g=w300-rw</string>
    <string name="invitation_cta">INSTALL NOW</string>
    <!--<string name="invitation_email"></string>-->
    <string name="invitation_subject">Check out the best app for converting currencies!</string>

    <string name="dialog_choose_country">Add more currencies</string>

    <string name="keypad0">0</string>
    <string name="keypad1">1</string>
    <string name="keypad2">2</string>
    <string name="keypad3">3</string>
    <string name="keypad4">4</string>
    <string name="keypad5">5</string>
    <string name="keypad6">6</string>
    <string name="keypad7">7</string>
    <string name="keypad8">8</string>
    <string name="keypad9">9</string>

    <string name="keypadDel">DEL</string>
    <string name="keypadDot">.</string>
    <string name="keypadClr">CLR</string>
    <string name="keypadAdd">+</string>
</resources>
