<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/keypad7"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/tv7"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textSize="@dimen/keyboard_text_size" />

            <TextView
                android:text="@string/keypad8"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/tv8"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textSize="@dimen/keyboard_text_size" />

            <TextView
                android:text="@string/keypad9"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/tv9"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textSize="@dimen/keyboard_text_size" />

            <TextView
                android:text="@string/keypadAdd"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/tvAdd"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textSize="@dimen/keyboard_text_size" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:text="@string/keypad4"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/tv4"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="@dimen/keyboard_text_size" />

            <TextView
                android:text="@string/keypad5"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/tv5"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textSize="@dimen/keyboard_text_size" />

            <TextView
            android:text="@string/keypad6"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/tv6"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textSize="@dimen/keyboard_text_size" />

        <TextView
            android:text="@string/keypadAdd"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/tvAdd2"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="@dimen/keyboard_text_size" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:text="@string/keypad1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/tv1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="@dimen/keyboard_text_size" />

        <TextView
            android:text="@string/keypad2"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/tv2"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="@dimen/keyboard_text_size" />

        <TextView
            android:text="@string/keypad3"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/tv3"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="@dimen/keyboard_text_size" />

        <TextView
            android:text="@string/keypadAdd"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/tvAdd3"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="@dimen/keyboard_text_size" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        <TextView
            android:text="@string/keypadDot"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/tvDot"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="@dimen/keyboard_text_size" />

            <TextView
                android:text="@string/keypad0"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/tv0"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textSize="@dimen/keyboard_text_size" />

            <TextView
            android:text="@string/keypadDel"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/tvDel"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textSize="@dimen/keyboard_text_size" />

            <TextView
                android:text="@string/keypadClr"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/tvAdd4"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textSize="@dimen/keyboard_text_size" />

        </TableRow>
    </TableLayout>
</LinearLayout>
